@@ -2,19 +2,18 @@ package com.brcolow.game;
 
 import com.brcolow.vulkanapi.VkDebugUtilsMessengerCallbackDataEXT;
 import com.brcolow.vulkanapi.vulkan_h;
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 
 import java.util.ArrayList;
 import java.util.List;
 
 import static com.brcolow.game.VkDebugUtilsMessageSeverityFlagBitsEXT.VkDebugUtilsMessageSeverityFlagBitsEXT;
 import static com.brcolow.game.VkStructureType.VkStructureType;
-import static jdk.incubator.foreign.CLinker.C_INT;
-import static jdk.incubator.foreign.CLinker.C_POINTER;
+import static com.brcolow.vulkanapi.vulkan_h.C_INT;
+import static com.brcolow.vulkanapi.vulkan_h.C_POINTER;
 
 public class VulkanDebug {
     public static final FunctionDescriptor DebugCallback$FUNC = FunctionDescriptor.of(C_INT,
@@ -42,13 +41,13 @@ public class VulkanDebug {
         }
         messageBuilder.append("DEBUG MESSAGE:\n\n");
         messageBuilder.append("Message type(s): ").append(String.join(", ", messageTypesStr)).append("\n");
-        MemorySegment callbackData = VkDebugUtilsMessengerCallbackDataEXT.ofAddress(pCallbackData, ResourceScope.globalScope());
+        MemorySegment callbackData = VkDebugUtilsMessengerCallbackDataEXT.ofAddress(pCallbackData, MemorySession.global());
         VkStructureType structureType = VkStructureType(VkDebugUtilsMessengerCallbackDataEXT.sType$get(callbackData));
         messageBuilder.append("Severity: ").append(severity).append("\n");
         messageBuilder.append("Structure Type: ").append(structureType).append("\n");
-        messageBuilder.append("Message ID name: ").append(CLinker.toJavaString(VkDebugUtilsMessengerCallbackDataEXT.pMessageIdName$get(callbackData))).append("\n");
+        messageBuilder.append("Message ID name: ").append(VkDebugUtilsMessengerCallbackDataEXT.pMessageIdName$get(callbackData).getUtf8String(0)).append("\n");
         messageBuilder.append("Message ID number: ").append(VkDebugUtilsMessengerCallbackDataEXT.messageIdNumber$get(callbackData)).append("\n");
-        messageBuilder.append("Message: ").append(CLinker.toJavaString(VkDebugUtilsMessengerCallbackDataEXT.pMessage$get(callbackData))).append("\n");
+        messageBuilder.append("Message: ").append(VkDebugUtilsMessengerCallbackDataEXT.pMessage$get(callbackData).getUtf8String(0)).append("\n");
         System.out.println(messageBuilder + "\n");
         // System.out.println("Queue label count: " + VkDebugUtilsMessengerCallbackDataEXT.queueLabelCount$get(callbackData));
         return vulkan_h.VK_FALSE();
