@@ -1,12 +1,12 @@
 package com.brcolow.game;
 
 import com.brcolow.winapi.Windows_h;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryAddress;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemoryAddress;
 
-import static jdk.incubator.foreign.CLinker.C_INT;
-import static jdk.incubator.foreign.CLinker.C_LONG_LONG;
-import static jdk.incubator.foreign.CLinker.C_POINTER;
+import static com.brcolow.winapi.Windows_h.C_INT;
+import static com.brcolow.winapi.Windows_h.C_LONG_LONG;
+import static com.brcolow.winapi.Windows_h.C_POINTER;
 
 public class WindowProc {
     public static final FunctionDescriptor WindowProc$FUNC = FunctionDescriptor.of(C_LONG_LONG,
@@ -15,6 +15,7 @@ public class WindowProc {
             C_LONG_LONG,
             C_LONG_LONG
     );
+
     static long WindowProcFunc(MemoryAddress hWnd, int msg, long wParam, long lParam) {
         // System.out.println("hWnd: " + hWnd);
         // System.out.println("msg: " + msg);
